@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-08-23T01:44:45Z",
+  "timestamp" : "2022-08-23T08:19:48Z",
   "count_outdated" : 477,
   "uniques_outdated" : 272,
   "count" : 498,
@@ -7,9 +7,9 @@
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -51,6 +51,13 @@
       "timestamp": "2022-08-22T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-08-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
